tests/reference/cpp-expr15-1661c0d.stderr
code generation error: Type number '16' not supported
   --> $DIR/src/bin/../runtime/lpython_builtin.py:106:1
    |
106 | T = TypeVar('T')
    | ^^^^^^^^^^^^^^^^ 
